Affichage du vote déjà enregistré au démarrage d'une procédure

--- a/consultations/www/medias/css/styles.css
+++ b/consultations/www/medias/css/styles.css
@@ -1,7 +1,8 @@
 .mask { list-style: none; display: none; }
 
-.consultation-message { width: 100%; margin: 1em 0; padding: 6px 12px; border-radius: 4px; color: #fff; background-color: #39b3d7; border-color: #269abc; }
-.consultation-error { width: 100%; margin: 1em 0; padding: 6px 12px; border-radius: 4px; color: #fff; background-color: #d9534f; border-color: #d43f3a; }
+.consultation-message { width: 100%; margin: 1em 0; padding: 6px 12px; border-radius: 4px; color: #fff; background-color: #39b3d7; }
+.consultation-message-light { width: 100%; margin: 1em 0; padding: 6px 12px; border-radius: 4px; color: #000; background-color: #fff; border: 1px solid #39b3d7; }
+.consultation-error { width: 100%; margin: 1em 0; padding: 6px 12px; border-radius: 4px; color: #fff; background-color: #d9534f; }
 .consultation-next { font-size: 1.5em; width: 100%; margin-top: 2em; }
 .consultation-next a { color: #ffffff; text-decoration: none; }
 .consultation-question { font-size: 1.3em; width: 100%; margin: 1em 0; padding: 6px 12px; border-radius: 4px; border: 1px solid grey; }
