--- a/consultations/www/medias/css/styles.css
+++ b/consultations/www/medias/css/styles.css
@@ -21,3 +21,9 @@ div.container-max table { width: 100%; }
 div.container-max tr > th { background-color: #f8f8f8; border-bottom: 1px solid #7e7e7e; }
 div.container-max td, th { padding: 2px 10px; }
 div.container-max h2 { margin: 10px 0 10px 0; }
+
+.consultation-manage { width: 100%; margin: 1em 0; padding: 6px 12px; border-radius: 4px; border: 1px solid #e7e7e7; }
+.consultation-manage > div { display: table-cell; padding-right: 12px; }
+.consultation-manage > .consultation-edit { width: 400px; font-weight: bold; }
+.consultation-manage > .consultation-time { width: 200px; }
+.consultation-manage > .consultation-results { width: 200px; }
